# mantissa-mlp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
bench/: contenders.py  plots.py  protocol.py  speed.py
mantissa_mlp/: __init__.py  datasets.py  model.py  models.py  tasks.py
tests/: test_datasets.py  test_gradients.py  test_model.py  test_models.py  test_tasks.py
