[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mantissa-mlp"
version = "0.1.1"
description = "Multilayer perceptrons for tabular data on the mantissa C engine, built on mantissa-cnn"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tekin Ertekin" }]
dependencies = [
    "numpy>=1.20",
    # Dense layers and both backends come from mantissa-cnn (which pulls the
    # engine mantissa-core >= 0.2.1 once both are on PyPI). For the dev layout,
    # `pip install -e ../cnn` first — the editable install satisfies this
    # requirement and finds a sibling mantissa/ checkout automatically.
    "mantissa-cnn>=0.1.0",
]

[project.optional-dependencies]
bench = ["torch", "tensorflow", "scikit-learn", "matplotlib>=3.5"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/tekinertekin/mantissa-mlp"
Base = "https://github.com/tekinertekin/mantissa-cnn"
Engine = "https://github.com/tekinertekin/mantissa"

[tool.setuptools]
packages = ["mantissa_mlp"]

[tool.pytest.ini_options]
filterwarnings = [
    # numpy 2.x on Apple Accelerate emits spurious FPE RuntimeWarnings from the
    # BLAS matmul kernel even on finite inputs (same issue documented in
    # mantissa-cnn's pyproject and mantissa-perceptron's bench/speed.py).
    "ignore:.*encountered in matmul:RuntimeWarning",
]
